tests/Rules/Aria/Fixtures/invalid/aria_invalid_attr.html.twig
<div aria-foo="bar">Broken</div>
